[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmandate"
version = "0.1.0"
description = "Programmable spend limits and audit trails so AI agents can pay for things without risking the wallet. An MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alex Kovtonyuk" }]
keywords = ["mcp", "ai-agents", "payments", "ethereum", "spend-control", "guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

dependencies = [
    "mcp>=1.28",
    "pydantic-settings>=2",
    "pyyaml>=6",
    "web3>=7",
    "eth-account>=0.13",
    "httpx>=0.27",
]

[project.optional-dependencies]
# only needed to run examples/demo_agent.py, not the server itself
demo = [
    "langchain>=1.3,<2",
    "langchain-openai>=1.3,<2",
    "langgraph>=1.2,<2",
    "langchain-mcp-adapters>=0.3",
    "python-dotenv>=1.0",
]
dev = ["pytest>=8", "bandit>=1.8"]

[project.scripts]
agentmandate = "agentmandate.main:main"

[project.urls]
Homepage = "https://github.com/theoddalex/agentmandate"

[tool.setuptools.packages.find]
where = ["src"]

[tool.bandit]
# SAST over the code that guards money. Tests are excluded (asserts and
# hardcoded fake keys are the point of tests, not findings).
exclude_dirs = ["tests", ".venv", "build"]
